# ntt-matrix

./: .gitignore  CMakeLists.txt  README.md  ntt-lib.json
PCBuild/Windows/MinGW/Debug/: b.bat  brt.bat  e.bat  g.bat  l.bat  r.bat  t.bat
PCBuild/Windows/MinGW/Release/: b.bat  g.bat  r.bat  rt.bat  t.bat
PCBuild/Windows/VC/2022/: g.bat
examples/: CMakeLists.txt  conv2d1_bias.tasm  conv2d1_weight.npy  conv2d1_weight.tasm  fc1_bias.tasm  fc1_weight.tasm  fc2_bias.tasm  fc2_weight.npy  fc2_weight.tasm  fc3_bias.tasm  fc3_weight.tasm  mnist_conv.cpp  mnist_example.cpp  test_nn.cpp  vector_example.cpp
examples/landmark/: CMakeLists.txt  bias_left.npy  bias_middle.npy  bias_middle.tasm  bias_right.tasm  conv10_bias.tasm  conv11_bias.tasm  conv11_weight.npy  conv12_bias.npy  conv13_bias.npy  conv13_weight.npy  conv14_bias.npy  conv14_bias.tasm  conv15_bias.npy  conv15_weight.npy  conv16_bias.npy  conv16_weight.npy  conv17_bias.npy  conv17_bias.tasm  conv18_bias.npy  conv19_weight.npy  conv19_weight.tasm  conv1_weight.npy  conv20_bias.tasm  conv21_bias.tasm  conv22_bias.npy  conv23_bias.npy  conv23_bias.tasm  conv24_bias.npy  conv24_weight.npy  conv24_weight.tasm  conv25_bias.tasm  conv25_weight.npy  conv25_weight.tasm  conv26_bias.tasm  conv27_bias.tasm  conv27_weight.tasm  conv28_bias.npy  conv28_bias.tasm  conv2_bias.npy  (+51 more)
examples/landmark/data/: bias_left.tasm  bias_right.npy  conv10_bias.npy  conv10_weight.npy  conv10_weight.tasm  conv11_bias.npy  conv11_weight.tasm  conv12_bias.tasm  conv12_weight.npy  conv12_weight.tasm  conv13_bias.tasm  conv13_weight.tasm  conv14_weight.npy  conv14_weight.tasm  conv15_bias.tasm  conv15_weight.tasm  conv16_bias.tasm  conv16_weight.tasm  conv17_weight.npy  conv17_weight.tasm  conv18_bias.tasm  conv18_weight.npy  conv18_weight.tasm  conv19_bias.npy  conv19_bias.tasm  conv1_bias.npy  conv1_bias.tasm  conv1_weight.tasm  conv20_bias.npy  conv20_weight.npy  conv20_weight.tasm  conv21_bias.npy  conv21_weight.npy  conv21_weight.tasm  conv22_bias.tasm  conv22_weight.npy  conv22_weight.tasm  conv23_weight.npy  conv23_weight.tasm  conv24_bias.tasm  (+72 more)
examples/mnist_conv/: conv2d1_bias.npy  fc4_bias.npy  fc4_bias.tasm  fc4_weight.npy  fc4_weight.tasm  mnist_conv.cpp  run_convert.bat
examples/mnist_example/: fc1_bias.npy  fc1_bias.tasm  fc1_weight.npy  fc1_weight.tasm  fc2_bias.npy  fc2_weight.tasm  fc3_bias.npy  fc3_weight.npy  fc3_weight.tasm  mnist_example.cpp  run_convert.bat
examples/tensor_example/: tensor_example.cpp
include/ntt_very_super_micro_dnn/: ntt_matrix.hpp  ntt_tensor.hpp
ntt_matrix/: ntt_matrix.hpp
tests/: CMakeLists.txt  matrix_float_test.cpp  matrix_i8_test.cpp  nn_test.cpp  tensor_test.cpp
utils/: npy_convert.py
vendors/: CMakeLists.txt
